--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "patriot",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Patriot command line tool",
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "subscribe": "mosquitto_sub -h 192.168.10.124 -t patriot",
-    "publish": "mosquitto_pub -h 192.168.10.124 -t patriot -m test:100"
+    "subscribe": "mosquitto_sub -h rons-mac-mini -t patriot",
+    "publish": "mosquitto_pub -h rons-mac-mini -t patriot -m test:100"
   },
   "author": "Ron Lisle",
   "license": "Apache-2.0",
